catkin_ws/logs/backend/build.make.291.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::matchTwoFrames(const SLAM::Frame&, const SLAM::Frame&, bool&, bool&, Eigen::Isometry3d&, Eigen::Matrix<double, 6, 6>&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:276:44: error: no matching function for call to ‘SLAM::Frame::getId(int) const’
   if(frame1.getId()== -1 && frame2.getId(10)){
                                            ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:276:44: note: candidate is:
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Mapping.h:21:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:16:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:101:6: note: int SLAM::Frame::getId() const
  int getId() const { assert(id); return *id; }
      ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:101:6: note:   candidate expects 0 arguments, 1 provided
make[2]: *** [CMakeFiles/frontend.dir/src/Mapping.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
